fixed form can add products now added a little css to make things more readable on page

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,17 @@
 .App {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
+.form {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 10vw;
 }
 
 
